# Griffl

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml  codeql.yaml
cmake/: detect.cmake
planning/: draw_tool.md
src/: CMakeLists.txt  button.c  button.h  canvas.c  canvas.h  color.c  color.h  color_picker.c  color_picker.h  common.h  draw_mode.h  fonts.c  fonts.h  griffl_application.c  griffl_application.h  input_state.c  input_state.h  main.c  memory.h  texture.c  texture.h  toolbar.c  toolbar.h
